[gd_scene load_steps=66 format=3 uid="uid://dekfi127ulci4"]

[ext_resource type="Script" path="res://Characters/Player/Player.gd" id="1_735at"]
[ext_resource type="Resource" uid="uid://bhfqpwxepkngo" path="res://Guns/GunList.tres" id="2_eygy7"]
[ext_resource type="Shader" uid="uid://4spx5o2wdnxh" path="res://Shaders/hit_flash.tres" id="3_q1mqo"]
[ext_resource type="Texture2D" uid="uid://yh3l6o45rn36" path="res://Characters/Player/Art/Archeologist - Dodge Roll.png" id="4_m1xrq"]
[ext_resource type="Texture2D" uid="uid://crjbyfapojsov" path="res://Characters/Player/Art/Archeologist nohands- Idle-Sheet.png" id="5_yb5eu"]
[ext_resource type="Texture2D" uid="uid://ldmllljyxup0" path="res://Characters/Player/Art/Archeologist - Walk-Sheet.png" id="6_o12jl"]
[ext_resource type="Texture2D" uid="uid://bsnjnjsnhf8t1" path="res://Characters/Player/Art/Hands/Hands - Idle-Sheet.png" id="7_emq4p"]
[ext_resource type="Texture2D" uid="uid://b64yc17nmxr8f" path="res://Characters/Player/Art/Hands/Hands - Walk-Sheet.png" id="8_ik2jt"]
[ext_resource type="Texture2D" uid="uid://ccn3a55lkipmh" path="res://Characters/Player/Art/Hands/Hands2 - Idle-Sheet.png" id="9_e7ul3"]
[ext_resource type="Texture2D" uid="uid://djlurups8mj5l" path="res://Characters/Player/Art/Hands/Hands2 - Walk-Sheet.png" id="10_aluqk"]
[ext_resource type="Script" path="res://Characters/Player/dynamic_cam.gd" id="11_ghvwq"]
[ext_resource type="Texture2D" uid="uid://b1tlgbjsth3kq" path="res://Other/light texture.png" id="12_ii3cf"]
[ext_resource type="Script" path="res://Guns/Gun_Manager.gd" id="13_ht3fr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tq7eg"]
radius = 24.0
height = 88.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2mlfq"]
radius = 20.0
height = 72.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_il4xp"]
shader = ExtResource("3_q1mqo")
shader_parameter/Enable = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k1li"]
atlas = ExtResource("4_m1xrq")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_heajx"]
atlas = ExtResource("4_m1xrq")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0lq7"]
atlas = ExtResource("4_m1xrq")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pc5p"]
atlas = ExtResource("4_m1xrq")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2j5w"]
atlas = ExtResource("4_m1xrq")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_di4hr"]
atlas = ExtResource("4_m1xrq")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuiw8"]
atlas = ExtResource("4_m1xrq")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iutsu"]
atlas = ExtResource("4_m1xrq")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t86qq"]
atlas = ExtResource("4_m1xrq")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkec2"]
atlas = ExtResource("4_m1xrq")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1duw"]
atlas = ExtResource("5_yb5eu")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukike"]
atlas = ExtResource("5_yb5eu")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rit1h"]
atlas = ExtResource("5_yb5eu")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8qf5"]
atlas = ExtResource("5_yb5eu")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nfnh"]
atlas = ExtResource("6_o12jl")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgi4c"]
atlas = ExtResource("6_o12jl")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oj87"]
atlas = ExtResource("6_o12jl")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxedt"]
atlas = ExtResource("6_o12jl")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp1sb"]
atlas = ExtResource("6_o12jl")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxc8k"]
atlas = ExtResource("6_o12jl")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_424pm"]
atlas = ExtResource("6_o12jl")
region = Rect2(144, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_mgvyj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k1li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heajx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0lq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pc5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2j5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di4hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuiw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iutsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t86qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkec2")
}],
"loop": true,
"name": &"Dodge",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1duw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukike")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rit1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8qf5")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nfnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgi4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oj87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxedt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp1sb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxc8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_424pm")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_av51u"]
atlas = ExtResource("7_emq4p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vflp5"]
atlas = ExtResource("7_emq4p")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h831d"]
atlas = ExtResource("7_emq4p")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqjk0"]
atlas = ExtResource("7_emq4p")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgk7p"]
atlas = ExtResource("8_ik2jt")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqcmx"]
atlas = ExtResource("8_ik2jt")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib7de"]
atlas = ExtResource("8_ik2jt")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_20f1v"]
atlas = ExtResource("8_ik2jt")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iakn8"]
atlas = ExtResource("8_ik2jt")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne5yp"]
atlas = ExtResource("8_ik2jt")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev1jn"]
atlas = ExtResource("8_ik2jt")
region = Rect2(144, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_w4ug1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_av51u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vflp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h831d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqjk0")
}],
"loop": true,
"name": &"IdleHands",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgk7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqcmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib7de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20f1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iakn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne5yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev1jn")
}],
"loop": true,
"name": &"WalkHands",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_13hto"]
atlas = ExtResource("9_e7ul3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4go2f"]
atlas = ExtResource("9_e7ul3")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwvhf"]
atlas = ExtResource("9_e7ul3")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghpxp"]
atlas = ExtResource("9_e7ul3")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_83wmd"]
atlas = ExtResource("10_aluqk")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qveut"]
atlas = ExtResource("10_aluqk")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk43p"]
atlas = ExtResource("10_aluqk")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j7x7"]
atlas = ExtResource("10_aluqk")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o08a5"]
atlas = ExtResource("10_aluqk")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_os108"]
atlas = ExtResource("10_aluqk")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0od6s"]
atlas = ExtResource("10_aluqk")
region = Rect2(144, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_p54us"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13hto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4go2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwvhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghpxp")
}],
"loop": true,
"name": &"IdleHands",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83wmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qveut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk43p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j7x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o08a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os108")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0od6s")
}],
"loop": true,
"name": &"WalkHands",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_3dcxc"]
resource_name = "HitFlash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:material:shader_parameter/Enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_w6fbm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:material:shader_parameter/Enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kpu6g"]
_data = {
"HitFlash": SubResource("Animation_3dcxc"),
"RESET": SubResource("Animation_w6fbm")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_mask = 7
motion_mode = 1
platform_floor_layers = 4294967040
script = ExtResource("1_735at")
Speed = 600
Health = 5
gun_list = ExtResource("2_eygy7")
dodge_length = 0.66
dodge_cooldown = 0.3
dodge_invincibility_length = 0.6

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_tq7eg")
debug_color = Color(1, 0.027451, 0, 0.419608)

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_2mlfq")

[node name="BodySprite" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_il4xp")
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_mgvyj")
animation = &"Idle"

[node name="LeftHandSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_w4ug1")
animation = &"WalkHands"

[node name="RightHandSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_p54us")
animation = &"IdleHands"

[node name="CurrentGun" type="Node2D" parent="."]

[node name="BlinkTimer" type="Timer" parent="."]

[node name="DynamicCamera" type="Camera2D" parent="."]
position_smoothing_speed = 0.5
script = ExtResource("11_ghvwq")

[node name="HitFlashPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kpu6g")
}

[node name="PlayerLight" type="PointLight2D" parent="."]
color = Color(0.752941, 0.270588, 0.231373, 1)
energy = 0.5
shadow_enabled = true
texture = ExtResource("12_ii3cf")
texture_scale = 4.35

[node name="GunManager" type="Node" parent="." node_paths=PackedStringArray("player", "current_gun_parent")]
script = ExtResource("13_ht3fr")
player = NodePath("..")
gun_list_resource = ExtResource("2_eygy7")
current_gun_parent = NodePath("../CurrentGun")
